--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Satvik Agrahari</title>
-    <link rel="stylesheet" href="/css/mysite_style.css">
+    <link rel="stylesheet" href="mysite_style.css">
     <link rel="icon" href="/image/android-chrome-192x192.png">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="\image\cloud.png" alt="cloud">
+        <img class="top-cloud" src="cloud.png" alt="cloud">
         <h1>I'm Satvik Agrahari.</h1>
         <h2> a programmer.</h2>
-        <img  class="bottom-cloud" src="\image\cloud.png" alt="cloud">
-        <img src="\image\mountain.png" alt="mountain">
+        <img  class="bottom-cloud" src="cloud.png" alt="cloud">
+        <img src="mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="profile_photo" src="\image\satvik_in_formal.jpg" alt="satvik profile photo" height="200" width="180">
+          <img class="profile_photo" src="satvik_in_formal.jpg" alt="satvik profile photo" height="200" width="180">
           <h2>Namaste.</h2>
           <p>I am full stack webdevloper persuing BTech degree.</p>
         </div>
@@ -24,12 +24,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="techskill_img" src="/image/html-image.png" alt="" height="100px" width="100px"><img class="techskill_img" src="/image/download.png" alt="" height="100px" width="75px">
+            <img class="techskill_img" src="html-image.png" alt="" height="100px" width="100px"><img class="techskill_img" src="download.png" alt="" height="100px" width="75px">
             <h3>Front-End Web devlopment</h3>
             <p>Tech enthusiast who wants to work with technology. Devloped couple of website since my class 10th, majorly worked on HTML and CSS part.</p>
           </div>
           <div class="skill-row">
-            <img class="mic_img" src="/image/singing-mic.png" alt="" height="100px" width="100px">
+            <img class="mic_img" src="singing-mic.png" alt="" height="100px" width="100px">
             <h3>Singing</h3>
             <p>Yes! you can comment on my singing✨.</p>
           </div>
